<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.RegexFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/edittext_regex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="text"
            android:hint="@string/hint_edittext_regex"
            android:autofillHints=""/>
        <EditText
            android:id="@+id/edittext_replace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="text"
            android:hint="@string/hint_edittext_replace"
            android:autofillHints=""/>
        <LinearLayout
            android:id="@+id/buttonbar_regex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/button_findnext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_findnext"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/button_replace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_replace"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/button_replaceall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_replaceall"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
        <EditText
            android:id="@+id/edittext_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="48dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:hint="@string/hint_edittext_regex_target"
            android:autofillHints=""/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>