<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/edittext_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textMultiLine"
            android:hint="@string/hint_edittext_char"
            android:autofillHints=""/>
        <Spinner
            android:id="@+id/spinner_encoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>
        <Spinner
            android:id="@+id/spinner_escapestyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>
        <CheckBox
            android:id="@+id/checkbox_changebytes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_checkbox_changebytes"
            android:checked="true"/>
        <EditText
            android:id="@+id/edittext_byte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textMultiLine"
            android:hint="@string/hint_edittext_byte"
            android:autofillHints=""/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>